--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,13 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-test'
+    
+    
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
