--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,13 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
     mavenLocal()
+    gradlePluginPortal()
 }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    
+    implementation 'com.uoctfm.commons:domain'
     
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
