--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,12 @@
+pluginManagement {
+    repositories {
+        mavenLocal()
+        mavenCentral()
+        gradlePluginPortal()
+        maven {
+            url 'http://repo.spring.io/plugins-release'
+        }
+    }
+}
+
 rootProject.name = 'principal'
