--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'com.uoctfm.commons:domain'
+    implementation 'local:tfm-commons-domain'
     
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
