--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-server.port=9090
+server.port=9091
 
+
+spring.jpa.database=POSTGRESQL
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/uoc
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=uoc
 spring.datasource.username=postgres
 spring.datasource.password=Passw0rd
-spring.datasource.schema=uoc
