Saves and loads the latests sample
With this changes we finally got the application stateless, so it is recording the latests sample and can use it on the next iteration in order to calculate the derived measure.

It generates errors on the derived calculation. But this will be fixed in the next commit.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=uoc
 spring.datasource.username=postgres
 spring.datasource.password=Passw0rd
