Before making AbstractDatabaseService stateless
In order to use autowired we will need to have full state abstract database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=9091
 
 spring.jpa.database=POSTGRESQL
 spring.jpa.properties.hibernate.dialect = org.hibernate.spatial.dialect.postgis.PostgisDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
