Forcing log file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=uoc
 spring.datasource.username=postgres
 spring.datasource.password=Passw0rd
+
+logging.file=principal.log
