Adding a property for capturing the systemstatistics
By now, the statistics will be captured if the boolean on the application properties values true.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.datasource.username=postgres
 spring.datasource.password=Passw0rd
 
 logging.file=principal.log
+
+service.main.systemstatistics=false
