Improve Timeseries service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.datasource.password=Passw0rd
 
 logging.file=principal.log
 
-service.main.systemstatistics=false
+service.main.systemstatistics=true
